sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	for(i<-0 to n-2){
        ^AlgBubbleSort1:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (j == n-1){
        ^AlgBubbleSort1:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	return false;	
        ^